testdata/parser/negative/32.pdl
#version 100

primitive main(int a) {
    loop: {
        synchronous {
            goto loop; // not allowed
        }
    }
}